tests/ui/inline-const/referencing-local-variables.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/referencing-local-variables.rs:2:13
   |
LL | const fn test_me<T>(a: usize) -> usize {
   |                     - this would need to be a `const`
LL |     const { a }
   |             ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
